# cpp_hexagonal

./: .gitignore  CMakeLists.txt  ReadMe.md  Readme.md
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt
src/adapters/in/cli/controller/: CliUserController.cpp  CliUserController.hpp
src/adapters/in/http/controller/: HttpUserController.cpp  HttpUserController.hpp
src/adapters/in/http/server/: SimpleHttpServer.cpp  SimpleHttpServer.hpp
src/core/: CMakeLists.txt
src/core/domain/model/: User.hpp
src/core/ports/in/: IUserService.hpp
src/core/usecase/: UserServiceImpl.cpp  UserServiceImpl.hpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/wiring/: CliAppFactory.hpp  HttpAppFactory.hpp
src/main/: CMakeLists.txt  main.cpp
